--- a/dlink-modem-page/src/index.css
+++ b/dlink-modem-page/src/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
 
 :root {
-  --font-base: "DM Sans", sans-serif;
+  --font-base: 'Tinos', serif;
   --white-color: #E9F1F7;
   --blue-color: #2274A5;
   --black-color: #131B23;
