show password Login

--- a/dlink-modem-page/src/components/Login/Login.scss
+++ b/dlink-modem-page/src/components/Login/Login.scss
@@ -15,7 +15,20 @@
   height: 15%; 
   margin: 10px;
 }
-  
+
+#password {
+  position: relative;
+}
+
+.password-toggle {
+  position: absolute;
+  top: 47%; 
+  right: 12%; 
+  cursor: pointer;
+  font-size: 1.5rem;
+  transition: right 0.3s ease; 
+}
+
 #containerForm {
     position: absolute;
     left: 50%;
@@ -79,9 +92,16 @@
     transition: all 200ms;
     box-shadow: var(--box-shadow);
   }
+
   .client-info:focus {
     width: 80%;
+
+    & ~ .password-toggle {
+      right: 8%; 
+    }
+
   }
+
   #rightForm > label {
     position: absolute;
     margin: -76px 130px;
@@ -162,6 +182,31 @@
     text-decoration:underline;
   }
 
+  .language-select {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  
+  .language-label {
+    margin-right: 10px;
+    font-weight: bold;
+    color: #333;
+  }
+  
+  .language-dropdown {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    color: #333;
+    cursor: pointer;
+  }
+  
+
   @keyframes slide-in-left {
     0% {
         transform: translateX(-100%);
@@ -172,6 +217,14 @@
 }
   
   @media (max-width: 1250px) {
+
+    .forgotPassword{
+    color: #7eceff;
+    }
+
+    .language-label {
+      color: var(--white-color);
+    }
 
     img.dlink_logo {
         position: absolute; /* Posiziona il logo in modo assoluto */
@@ -205,6 +258,10 @@
   
   @media (max-height: 850px) {
 
+    .language-label {
+      color: var(--white-color);
+    }
+
     img.dlink_logo {
       position: absolute; /* Posiziona il logo in modo assoluto */
       top: 0;
@@ -235,6 +292,10 @@
   }
 
   @media only screen and (max-width: 768px) {
+
+    .language-label {
+      color: var(--white-color);
+    }
 
     img.dlink_logo {
       position: absolute; /* Posiziona il logo in modo assoluto */
