--- a/dlink-modem-page/src/components/Login/Login.scss
+++ b/dlink-modem-page/src/components/Login/Login.scss
@@ -20,14 +20,23 @@
   position: relative;
 }
 
-.password-toggle {
+.password-toggle, .confPassword-toggle {
   position: absolute;
-  top: 47%; 
-  right: 12%; 
   cursor: pointer;
   font-size: 1.5rem;
   transition: right 0.3s ease; 
 }
+
+.password-toggle {
+  top: 47%; 
+  right: 12%; ; 
+}
+
+.confPassword-toggle {
+  top: 55.5%; 
+  right: 12%; 
+}
+
 
 #containerForm {
     position: absolute;
@@ -68,7 +77,7 @@
   #welcomeForm {
     font-size: 75px;
     font-weight: 300;
-    margin-top: 330px;
+    margin-top: 170px;
     text-shadow: var(--box-shadow);
     color: var(--white-color);
   }
@@ -81,7 +90,7 @@
     text-shadow: var(--box-shadow);
   }
 
-  .client-info {
+   .client-info, .client-info2, .client-info3 {
     display: block;
     margin: 20px auto;
     width: 60%;
@@ -93,13 +102,24 @@
     box-shadow: var(--box-shadow);
   }
 
-  .client-info:focus {
+  .client-info2:focus {
     width: 80%;
 
     & ~ .password-toggle {
       right: 8%; 
     }
+  }
 
+  .client-info3:focus {
+    width: 80%;
+
+    & ~ .confPassword-toggle {
+      right: 8%; 
+    }
+  }
+
+  .client-info:focus {
+    width: 80%;
   }
 
   #rightForm > label {
@@ -162,7 +182,7 @@
     text-align: right;
   }
   
-  .text_danger.client-info {
+  .text_danger.client-info,.text_danger.client-info2,.text_danger.client-info3 {
     border-color: red;
   }
   
@@ -217,6 +237,33 @@
 }
   
   @media (max-width: 1250px) {
+
+    .password-toggle {
+      top: 47%; 
+      right: 25%; 
+      color: #333;
+    }
+
+    .confPassword-toggle {
+      right: 25%; 
+      color: #333;
+    }
+
+    .client-info2:focus {
+      width: 80%;
+  
+      & ~ .password-toggle {
+        right: 14%; 
+      }
+    }
+
+    .client-info3:focus {
+      width: 80%;
+  
+      & ~ .confPassword-toggle {
+        right: 14%; 
+      }
+    }
 
     .forgotPassword{
     color: #7eceff;
@@ -292,6 +339,33 @@
   }
 
   @media only screen and (max-width: 768px) {
+
+    .password-toggle {
+      top: 35.5%; 
+      right: 25%; 
+      color: #333;
+    }
+
+    .confPassword-toggle {
+      top: 47.5%; 
+      color: #333;
+    }
+
+    .client-info2:focus {
+      width: 80%;
+  
+      & ~ .password-toggle {
+        right: 14%; 
+      }
+    }
+
+    .client-info3:focus {
+      width: 80%;
+  
+      & ~ .confPassword-toggle {
+        right: 14%; 
+      }
+    }
 
     .language-label {
       color: var(--white-color);
